Add CVV documentation
